<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UsedPustak</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_register_page">RegisterPage</string>
    <string name="title_activity_login_page">LoginPage</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone_no">Enter Phone no</string>
    <string name="enter_password">Enter Password</string>
    <string name="reset">Reset</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_address">Enter Address</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_">Don\'t have an account??</string>
    <string name="create_one">Create new</string>
    <string name="todo">TODO</string>
    <string name="create_new">Create new</string>
    <string name="book_store_">Book Store...</string>
    <string name="_for_all_the_book_worms">...for all the book worms</string>
    <string name="register">Register</string>
    <string name="create_an_account">Create an Account....</string>
    <string name="user_login">USER LOGIN</string>
    <string name="title_activity_books_page">BooksPage</string>
    <string name="select_standard">Select Standard</string>
    <string name="select_branch">Select Branch</string>
    <string name="large_text">Large Text</string>

    <string-array name="Classes">
        <item>...Select...</item>
        <item>6thClass</item>
        <item>7thClass</item>
        <item>8thClass</item>
        <item>9thClass</item>
        <item>10thClass</item>
        <item>Intermediate</item>
        <item>Engineering</item>
    </string-array>
    <string-array name="Branches">
        <item>...Select...</item>
    </string-array>

    <string name="welcome">Welcome</string>
    <string name="title_activity_admin_login_page">AdminLoginPage</string>
    <string name="admin_login">ADMIN LOGIN</string>
    <string name="title_activity_admin_insertion_page">AdminInsertionPage</string>
    <string name="subjectid">SubjectId</string>
    <string name="subjectname">SubjectName</string>
    <string name="price">Price</string>
    <string name="pages">Pages</string>
    <string name="language">Language</string>
    <string name="bookcondition">Condition</string>
    <string name="add">Add</string>
    <string name="standard">Standard</string>
    <string name="title_activity_admin_update_page">AdminUpdatePage</string>
    <string name="title_activity_books_in_list">BooksInList</string>
    <string name="title_activity_books_details">BooksDetails</string>
    <string name="title_activity_novels_in_list">NovelsInList</string>
    <string name="title_activity_novels_details">NovelsDetails</string>
    <string name="title_activity_magazines_in_list">MagazinesInList</string>
    <string name="title_activity_magazines_details">MagazinesDetails</string>
    <string name="title_activity_journals_in_list">JournalsInList</string>
    <string name="title_activity_journals_details">JournalsDetails</string>
    <string name="title_activity_confirmation_page">ConfirmationPage</string>
    <string name="title_activity_queries_page">QueriesPage</string>
    <string name="title_activity_conclusion_page">ConclusionPage</string>

</resources>