<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterPage" >

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText3"
        android:layout_alignLeft="@+id/editText3"
        android:layout_marginBottom="14dp"
        android:ems="10"
        android:hint="@string/enter_address"
        android:inputType="textMultiLine"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText4"
        android:layout_alignLeft="@+id/editText1"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:maxLength="10"
        android:hint="@string/enter_phone_no"
        android:inputType="phone"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText3"
        android:layout_below="@+id/editText4"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:paddingLeft="10dp" >

    </EditText>

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText5"
        android:layout_below="@+id/editText5"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText3"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp" >

    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@+id/editText6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_button"
        android:onClick="true"
        android:text="@string/submit"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/button1"
        android:alpha="0.4"
        android:background="@drawable/rounded_button"
        android:text="@string/reset"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText1"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="19dp"
        android:text="@string/create_an_account"
        android:textAppearance="?android:attr/textAppearanceMedium" />
   
</RelativeLayout>